setting up custom domain for wisosim.com

--- a/server/serverless.yml
+++ b/server/serverless.yml
@@ -1,13 +1,22 @@
-# holds the 
+# holds the sticker server backend
 service: server
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-# frameworkVersion: "=X.X.X"
 
 provider:
   name: aws
   runtime: nodejs6.10
+  region: us-east-1
+  stage: prod
+
+plugins:
+  - serverless-domain-manager
+
+custom:
+  customDomain:
+    domainName: "api.wisosim.com"
+    stage: prod
+    basePath: sticker
+    certificateName: "*.wisosim.com"
+    endpointType: edge
 
 functions:
   query:
